Fix overflow

--- a/frontend/src/styles/slideout.css
+++ b/frontend/src/styles/slideout.css
@@ -1,5 +1,5 @@
 .slideout-menu {
-    @apply fixed bottom-0 min-h-screen hidden lg:block;
+    @apply fixed bottom-0 min-h-screen hidden lg:block lg:z-10;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -12,8 +12,9 @@
 }
 
 .slideout-panel {
-    @apply relative bg-gray-100 dark:bg-gray-750 min-h-screen h-full w-full lg:ml-76;
+    @apply relative bg-gray-100 dark:bg-gray-750 min-h-screen h-full w-full lg:pl-76;
     will-change: transform;
+    z-index: 1;
 }
 
 .slideout-panel:before {
@@ -27,7 +28,7 @@
 }
 
 .slideout-panel--right {
-    @apply lg:mr-60;
+    @apply lg:pr-60;
 }
 
 .slideout-panel--header {
